--- a/index.html
+++ b/index.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <!-- <label for="name">Naam</label>
+    <input type="text" class="name" id="name"><br>
+    <label for="age">Leeftijd</label>
+    <input type="number" class="age" id="age"><br>
+    <button class="add-btn">Toevoegen</button>
+
+    <div class="users"></div>-->
+
+    <div class="game-over hidden">
+        <h1>Game Over</h1>
+    </div>
+
     <script src="js/main.js"></script>
 </body>
 </html>
