--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
 
     <div class="users"></div>-->
 
-    <div class="game-over hidden">
+    <!-- <div class="game-over hidden">
         <h1>Game Over</h1>
+    </div> -->
+
+    <div class="users">
+        
     </div>
 
     <script src="js/main.js"></script>
